--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,3 +37,13 @@
 
 }
 
+
+@keyframes marquee {
+  0% { transform: translateX(110%); }
+  100% { transform: translateX(-125%);}
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+}
+
