--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
     .app {
         @apply mx-2 max-w-screen-xl md:mx-14 lg:mx-36  2xl:mx-auto;
     }
+
     .admin {
         @apply mx-2   md:mx-8 xl:max-w-screen-xl xl:mx-auto;
     }
@@ -31,7 +32,8 @@
         opacity: 0.8;
         background: #fbf9f9 repeating-linear-gradient(-45deg, #f1e1e1, #f1e1e1 2px, #ffffff 2px, #ffffff 12px);
     }
-    .tabs{
+
+    .tabs {
         @apply ui-selected:bg-main-500 rounded-xl px-4 py-2  ui-selected:text-white ui-not-selected:text-[#84849D] flex items-center gap-4
     }
 
@@ -39,11 +41,15 @@
 
 
 @keyframes marquee {
-  0% { transform: translateX(110%); }
-  100% { transform: translateX(-125%);}
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 .animate-marquee {
-  animation: marquee 20s linear infinite;
+    animation: marquee 20s linear infinite;
 }
 
