--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,17 +44,21 @@
 }
 
 
-@keyframes marquee {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
+/*@keyframes marquee {*/
+/*    0% {*/
+/*        transform: translateX(100%);*/
+/*    }*/
+/*    100% {*/
+/*        transform: translateX(-100%);*/
+/*    }*/
+/*}*/
 
-.animate-marquee {
-    animation: marquee 20s linear infinite;
+/*.animate-marquee {*/
+/*    animation: marquee 20s linear infinite;*/
+/*}*/
+
+.images-wrap {
+    @apply flex
 }
 
 /* ---------------------------- Pagination style ---------------------------- */
